plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version '4.0.2'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springAiVersion', '2.0.0')
	set('awsSdkVersion', '2.47.3')
	set('queryDslVersion', '5.1.0')
	set('jjwtVersion', '0.12.6')
	set('snippetsDir', file("build/generated-snippets"))
}

configurations {
	asciidoctorExt
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
		mavenBom "software.amazon.awssdk:bom:${awsSdkVersion}"
	}
}

dependencies {
	// Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-json'
	// Spring Boot 4는 별도 AOP starter 대신 Spring AOP와 AspectJ Weaver를 직접 추가한다.
	implementation 'org.springframework:spring-aop'
	implementation 'org.aspectj:aspectjweaver'

	// JPA & PostgreSQL
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'

	// pgvector - Hibernate vector 타입 매핑 (spot_embedding)
	implementation 'org.hibernate.orm:hibernate-vector'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// QueryDSL 5.1.0
	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// Redis (non-reactive)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Security & OAuth2 (Kakao Login)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT - jjwt 0.12.6
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    implementation 'com.auth0:java-jwt:4.4.0'
	implementation 'com.auth0:jwks-rsa:0.23.0'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Actuator & Prometheus
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

	// Swagger / OpenAPI (springdoc v3 - Spring Boot 4 호환)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

	// Spring AI 2.0.0 - OpenAI (chat + embedding)
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'

	// AWS SDK v2
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:ses'
	implementation 'software.amazon.awssdk:secretsmanager'
	implementation 'software.amazon.awssdk:sts'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:4.1.0'


	// Spring REST Docs
	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	configurations 'asciidoctorExt'
	dependsOn test
}
